Switch from position: fixed to absolute if the minimum viewport height is too small to show the entire fixed header

--- a/web/css/buttsweater.scss
+++ b/web/css/buttsweater.scss
@@ -55,7 +55,7 @@ html {
 @media (min-width: 64em) {
 	.rail {
 		text-align: left;
-		position: fixed;
+		position: absolute;
 		left: 0;
 		top: 0;
 		width: 18em;
@@ -66,6 +66,11 @@ html {
 		margin-left: 18em;
 		position: relative;
 		min-height: 52em;
+	}
+}
+@media (min-width: 64em) and (min-height: 25em) {
+	.rail {
+		position: fixed;
 	}
 }
 
